feat(deploy): set heap size to 1/2 available mem on k8s (#1014)